changed books format from .mobi do .epub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="books-container">
             <div class="books-card">
-                <a href="./media/Adrian Rogoz - Pretul secant al genunii.mobi" download>
+                <a href="./media/Adrian-Rogoz-Pretul-secant-al-genunii.epub" download>
                     <img src="./media/pretul_secant.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
                 <span class="book-description">
@@ -30,7 +30,7 @@
                 </span>
             </div>
             <div class="books-card">
-                <a href="./media/Alexandru Talex - Panait Istrati.mobi" download>
+                <a href="./media/Alexandru-Talex-Panait-Istrati.epub" download>
                     <img src="./media/panait_istrati.jpg" alt="coperta Panait istrati" class="book-img-cover">
                 </a>
                 <span class="book-description">
@@ -38,7 +38,7 @@
                 </span>
             </div>
             <div class="books-card">
-                <a href="./media/Andrei Plesu - Minima moralia.mobi" download>
+                <a href="./media/Andrei-Plesu-Minima-moralia.epub" download>
                     <img src="./media/minima_moralia.jpg" alt="coperta minima_moralia" class="book-img-cover">
                 </a>
                 <span class="book-description">
@@ -46,7 +46,7 @@
                 </span>
             </div>
             <div class="books-card">
-                <a href="./media/Anton Holban - Ioana.mobi" download>
+                <a href="./media/Anton-Holban-Ioana.epub" download>
                     <img src="./media/ioana.jpg" alt="coperta Ioana" class="book-img-cover">
                 </a>
                 <span class="book-description">
@@ -56,7 +56,7 @@
         </div>
         <div class="books-container">
             <div class="books-card">
-                <a href="./media/Bogdan Ficeac - Tehnici de manipulare.mobi" download>
+                <a href="./media/Bogdan-Ficeac-Tehnici-de-manipulare.epub" download>
                     <img src="./media/tehnici.jpg" alt="coperta tehnici de manipulare" class="book-img-cover">
                 </a>
                 <span class="book-description"> 
@@ -64,7 +64,7 @@
                 </span>
             </div>
             <div class="books-card">
-                <a href="./media/Camil Baciu - Revolta Creierilor.mobi" download>
+                <a href="./media/Camil-Baciu-Revolta-Creierilor.epub" download>
                     <img src="./media/revolta.jpg" alt="coperta Revolta Creierilor" class="book-img-cover">
                 </a>
                 <span class="book-description"> 
@@ -72,7 +72,7 @@
                 </span>
             </div>
             <div class="books-card">
-                <a href="./media/Constantin Chirita - Ingerul alb.mobi" download>
+                <a href="./media/Constantin-Chirita-Ingerul-alb.epub" download>
                     <img src="./media/ingerul.jpg" alt="coperta Ingerul Alb" class="book-img-cover">
                 </a>
                 <span class="book-description"> 
@@ -80,7 +80,7 @@
                 </span>
             </div>
             <div class="books-card">
-                <a href="./media/Constantin Chirita - Pescarusul alb.mobi" download>
+                <a href="./media/Constantin-Chirita-Pescarusul-alb.epub" download>
                     <span>
                     <img src="./media/pescarusul.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
                 </a>
