optimized SEO and images format

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="românească">
+<html lang="ro">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>&copy; Kindle Romania</title>
     <link rel="stylesheet" href="style.css">
-    <title>&copy Kindle Romania</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta name="description" content="Descoperă o selecție vastă de cărți în limba română, disponibile gratuit pentru Kindle în întreaga lume.">
+    <meta name="keywords" content="Kindle, cărți românești, eBooks, literatură română">
 </head>
 <body>
     <header>
@@ -23,73 +26,71 @@
         <div class="books-container">
             <div class="books-card">
                 <a href="./media/Adrian-Rogoz-Pretul-secant-al-genunii.epub" download>
-                    <img src="./media/pretul_secant.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
+                    <img src="./media/pretul_secant.webp" alt="coperta Prețul secant al genunii" class="book-img-cover">
                 </a>
-                <span class="book-description">
+                <div class="book-description">
                     <h2>Adrian Rogoz</h2>
-                </span>
+                </div>
             </div>
             <div class="books-card">
                 <a href="./media/Alexandru-Talex-Panait-Istrati.epub" download>
-                    <img src="./media/panait_istrati.jpg" alt="coperta Panait istrati" class="book-img-cover">
+                    <img src="./media/panait_istrati.webp" alt="coperta Panait Istrati" class="book-img-cover">
                 </a>
-                <span class="book-description">
+                <div class="book-description">
                     <h2>Alexandru Talex</h2>
-                </span>
+                </div>
             </div>
             <div class="books-card">
                 <a href="./media/Andrei-Plesu-Minima-moralia.epub" download>
-                    <img src="./media/minima_moralia.jpg" alt="coperta minima_moralia" class="book-img-cover">
+                    <img src="./media/minima_moralia.webp" alt="coperta Minima Moralia" class="book-img-cover">
                 </a>
-                <span class="book-description">
+                <div class="book-description">
                     <h2>Andrei Plesu</h2>
-                </span>
+                </div>
             </div>
             <div class="books-card">
                 <a href="./media/Anton-Holban-Ioana.epub" download>
-                    <img src="./media/ioana.jpg" alt="coperta Ioana" class="book-img-cover">
+                    <img src="./media/ioana.webp" alt="coperta Ioana" class="book-img-cover">
                 </a>
-                <span class="book-description">
+                <div class="book-description">
                     <h2>Anton Holban</h2>
-                </span>
+                </div>
             </div>
         </div>
         <div class="books-container">
             <div class="books-card">
                 <a href="./media/Bogdan-Ficeac-Tehnici-de-manipulare.epub" download>
-                    <img src="./media/tehnici.jpg" alt="coperta tehnici de manipulare" class="book-img-cover">
+                    <img src="./media/tehnici.webp" alt="coperta Tehnici de manipulare" class="book-img-cover">
                 </a>
-                <span class="book-description"> 
-                <h2>Bogdan Ficeac</h2>
-                </span>
+                <div class="book-description"> 
+                    <h2>Bogdan Ficeac</h2>
+                </div>
             </div>
             <div class="books-card">
                 <a href="./media/Camil-Baciu-Revolta-Creierilor.epub" download>
-                    <img src="./media/revolta.jpg" alt="coperta Revolta Creierilor" class="book-img-cover">
+                    <img src="./media/revolta.webp" alt="coperta Revolta creierilor" class="book-img-cover">
                 </a>
-                <span class="book-description"> 
-                <h2>Camil Baciu</h2>
-                </span>
+                <div class="book-description"> 
+                    <h2>Camil Baciu</h2>
+                </div>
             </div>
             <div class="books-card">
                 <a href="./media/Constantin-Chirita-Ingerul-alb.epub" download>
-                    <img src="./media/ingerul.jpg" alt="coperta Ingerul Alb" class="book-img-cover">
+                    <img src="./media/ingerul.webp" alt="coperta Îngerul alb" class="book-img-cover">
                 </a>
-                <span class="book-description"> 
-                <h2>Constantin Chirita</h2>
-                </span>
+                <div class="book-description"> 
+                    <h2>Constantin Chirita</h2>
+                </div>
             </div>
             <div class="books-card">
                 <a href="./media/Constantin-Chirita-Pescarusul-alb.epub" download>
-                    <span>
-                    <img src="./media/pescarusul.jpg" alt="coperta Prețul_secant_al_genunii" class="book-img-cover">
+                    <img src="./media/pescarusul.webp" alt="coperta Pescărușul alb" class="book-img-cover">
                 </a>
-                <span class="book-description"> 
-                <h2>Constantin Chirita</h2>
-                </span>
+                <div class="book-description"> 
+                    <h2>Constantin Chirita</h2>
+                </div>
             </div>
         </div>
-    </div>
-</main>
+    </main>
 </body>
 </html>
