Update index.html added footer

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
                 </div>
             </div>
         </div>
-    </main>
+    </main> 
+    <footer>
+        <h2>Multumim de Vizita</h2>
+    </footer>
 </body>
 </html>
